--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kakaoforge",
+  "name": "@aodjo/kakaoforge",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -7,6 +7,9 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "build:watch": "tsc -p tsconfig.json --watch",
